API endpoints for phase 1 (#9)
* WIP: Add API response helpers, middleware, and /register handler

* WIP: Add application config (in dedicated package)

* WIP: Add plumbing for and wire up API server and /register handler

* WIP: Add and wire up /login, /refresh and /logout handlers

* Fix issue where refresh tokens were being generated using (non-deterministic) bcrypt by switching to (deterministic) SHA-256

* Make /logout unprotected and clarify in OpenAPI spec

* Unit test handler

* Add handler integration tests, fix auth service unique constraint race condition
